@@ -258,8 +258,8 @@ RampUp(float)
 Elasticity(float)
 ElasticityFalloff(float)
 Return(float)
-*Mass(float)
-*Strength(float)
+Mass(float)
+Strength(float)
 OverridePhysics(int) - overrides the flipper physics settings with pre defined settings defined under Preferences -> Physics Options.
                        You can define up to 8 different physics settings for the table and the flippers. Save them to one of the 8 slots and
                        by assigning the slot number to this OverridePhysics it overrides these settings. default=0 (means use table settings)
